Some name changing

--- a/NotesOnBand/NotesOnBand/NotesOnBand.csproj
+++ b/NotesOnBand/NotesOnBand/NotesOnBand.csproj
@@ -92,7 +92,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="SavedNotes\XMLFile1.xml" />
+    <Content Include="SavedNotes\PreviousSyncedNotes.xml" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
