--- a/NotesOnBand/NotesOnBandUnitTest/NotesOnBandUnitTest.csproj
+++ b/NotesOnBand/NotesOnBandUnitTest/NotesOnBandUnitTest.csproj
@@ -95,11 +95,12 @@
     <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BandUnitTest\BandUnitTest.cs" />
+    <Compile Include="ModelUnitTests\BandUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModelsUnitTests\MainPageViewModelUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="UnitTestApp.xaml">
