--- a/NotesOnBand/NotesOnBandEngine/NotesOnBandEngine.csproj
+++ b/NotesOnBand/NotesOnBandEngine/NotesOnBandEngine.csproj
@@ -110,11 +110,10 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Models\Band.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MainPageViewModel.cs" />
     <EmbeddedResource Include="Properties\NotesOnBandEngine.rd.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
