Add in UnitTest for MainPageViewModel

--- a/NotesOnBand/NotesOnBandUnitTest/NotesOnBandUnitTest.csproj
+++ b/NotesOnBand/NotesOnBandUnitTest/NotesOnBandUnitTest.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
     <Compile Include="UnitTest.cs" />
+    <Compile Include="ViewModelsUnitTests\MainPageViewModelUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="UnitTestApp.xaml">
