--- a/NotesOnBand/NotesOnBandEngineUnitTest/NotesOnBandEngineUnitTest.csproj
+++ b/NotesOnBand/NotesOnBandEngineUnitTest/NotesOnBandEngineUnitTest.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
     <Compile Include="UnitTest.cs" />
+    <Compile Include="ViewModelTests\MainPageViewModelTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="UnitTestApp.xaml">
@@ -125,6 +126,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NotesOnBandEngine\NotesOnBandEngine.csproj">
+      <Project>{cb4e2d34-f667-4c16-853e-836058569900}</Project>
+      <Name>NotesOnBandEngine</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
