--- a/NotesOnBand/NotesOnBandEngineUnitTest/NotesOnBandEngineUnitTest.csproj
+++ b/NotesOnBand/NotesOnBandEngineUnitTest/NotesOnBandEngineUnitTest.csproj
@@ -123,6 +123,9 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="SavedNotes\PreviousSyncedNotes.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
