--- a/NotesOnBand/NotesOnBandEngine/NotesOnBandEngine.csproj
+++ b/NotesOnBand/NotesOnBandEngine/NotesOnBandEngine.csproj
@@ -107,6 +107,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AppFileHandler.cs" />
     <Compile Include="Models\Band.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
