--- a/NotesOnBand/NotesOnBand/NotesOnBand.csproj
+++ b/NotesOnBand/NotesOnBand/NotesOnBand.csproj
@@ -110,6 +110,7 @@
     <None Include="NotesOnBand_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Square310x310Logo.scale-200.png" />
     <Content Include="Assets\TileIconLarge.png" />
     <Content Include="Assets\TileIconSmall.png" />
     <Content Include="Properties\Default.rd.xml" />
