--- a/NotesOnBand/NotesOnBandEngine/NotesOnBandEngine.csproj
+++ b/NotesOnBand/NotesOnBandEngine/NotesOnBandEngine.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Events\ErrorOccurredEventArgs.cs" />
     <Compile Include="Models\Band.cs" />
+    <Compile Include="Models\XMLHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <EmbeddedResource Include="Properties\NotesOnBandEngine.rd.xml" />
