--- a/NotesOnBand/NotesOnBandEngineUnitTest/NotesOnBandEngineUnitTest.csproj
+++ b/NotesOnBand/NotesOnBandEngineUnitTest/NotesOnBandEngineUnitTest.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ModelTests\BandTest.cs" />
+    <Compile Include="ModelTests\XMLHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
