Ui Layer change. Now will be using Toggle Switch instead of toggle  button

--- a/NotesOnBand/NotesOnBand/NotesOnBand.csproj
+++ b/NotesOnBand/NotesOnBand/NotesOnBand.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Controls\BandControl.xaml.cs">
       <DependentUpon>BandControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Converters\BandVersionToBandImageConverter.cs" />
+    <Compile Include="Converters\BandVersionToBool.cs" />
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
