--- a/NotesOnBand/NotesOnBand/NotesOnBand.csproj
+++ b/NotesOnBand/NotesOnBand/NotesOnBand.csproj
@@ -131,6 +131,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\Square310x310Logo.scale-200.png" />
+    <Content Include="Assets\StoreLogo_WhiteTheme.png" />
     <Content Include="Assets\TileIconLarge.png" />
     <Content Include="Assets\TileIconSmall.png" />
     <None Include="Package.StoreAssociation.xml" />
